--- a/static/location.html
+++ b/static/location.html
@@ -1,7 +1,24 @@
 <html>
   <head>
-    <h1>
-      
-    </h1>
-  </head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <h2 style="font-style:italic; text-align:Center;
+      color:rgb(200,0,56); margin-top: 100px; text-decoration: underline;">
+      LOCATION
+    </h2></head>
+    <body>
+  
+      <div style="text-align:Center">
+        <h3 class="text-center mt-4">
+          Kittur Rani Channamma Circle,<br>
+          Ashok Nagar,Nipani-591237.<br>
+          <div class="container" style="text-align:right;">
+    <a href="https://shree-jewellers.nilmali.repl.co/"><button type="button" class="btn btn-outline-primary" style="width:100px">Back</button></a></div>
+        </h3>
+        <hr>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3827.4555604012735!2d74.3804978!3d16.401673799999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc0f393c07fd077%3A0x84663a502e718c3e!2sShree%20jewellery!5e0!3m2!1sen!2sin!4v1663650324121!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+    </body>
+  
 </html>
