--- a/static/contactUs.html
+++ b/static/contactUs.html
@@ -15,6 +15,8 @@
     <div class="container">
     <div  style="Text-align:center;">
       <img src="https://shree-jewellers.nilmali.repl.co/static/Card.jpeg" height= 360px > 
+     <br>
+      <a href="mailto:malivilas4998@gmail.com?subject=Query related to Jewellery" button  type="button" class="btn btn-primary mt-4">Email Us</button></a>
 
     </div>
   </body>
