--- a/static/earrings.html
+++ b/static/earrings.html
@@ -14,9 +14,9 @@
     <hr>
   
     <div class="container .img-fluid">
-    <p>Kalyan Jewellers offers a stunning variety of earrings in spectacular patterns, lovely designs, and striking themes. The earring styles range from the traditional to the ultra-modern ones.
+    <p>Shree Jewellers offers a stunning variety of earrings in spectacular patterns, lovely designs, and striking themes. The earring styles range from the traditional to the ultra-modern ones.
 <br>
-At Kalyan, you can also find a varied collection of earrings that you can gift to your loved ones. Apart from Gothic and Victorian Chandelier designs, we present to you the Vanmala Gold Earrings, traditional jhumkas, and studs for children. Our earrings collection comes in 22 and 18 KT and striking colours including, yellow gold, two-tone gold, rose gold, and white gold.</p>
+Here, you can also find a varied collection of earrings that you can gift to your loved ones. Apart from Gothic and Victorian Chandelier designs, we present to you the Vanmala Gold Earrings, traditional jhumkas, and studs for children. Our earrings collection comes in 22 and 18 KT and striking colours including, yellow gold, two-tone gold, rose gold, and white gold.</p>
       
     
       <img src="https://shree-jewellers.nilmali.repl.co/static/12.jpeg" height= 160px>
